# cofecito

./: .gitignore  .mcp.json  README.md  claude.md
.claude/: settings.local.json
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/scripts/: init-collection.ts  init-registry.ts
backend/src/: config.ts  server.ts
backend/src/plugins/: auth.ts  prisma.ts  redis.ts
backend/src/routes/: analytics.ts  auth.ts  cups.ts  farms.ts  feedback.ts  lots.ts  menus.ts  nfts.ts  ramp.ts  trazabilidad.ts  trucks.ts  upload.ts  voice.ts
backend/src/services/: elevenlabs.service.ts  ipfs.service.ts  qr.service.ts  solana.service.ts
cofecito/: Anchor.toml
cofecito/programs/cofecito/: Cargo.toml
cofecito/programs/qr-redeem/: Cargo.toml
cofecito/programs/qr-redeem/src/: lib.rs  state.rs
cofecito/programs/qr-redeem/src/instructions/: initialize.rs  mod.rs  redeem.rs
cofecito/programs/traceability-registry/: Cargo.toml
cofecito/programs/traceability-registry/src/: error.rs  lib.rs  state.rs
cofecito/programs/traceability-registry/src/instructions/: initialize_registry.rs  mod.rs  register_lot.rs  verify_lot.rs
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  (+1 more)
mobile-app/: .flutter-plugins-dependencies  README.md  pubspec.yaml
mobile-app/android/: local.properties
mobile-app/lib/: app.dart  main.dart
mobile-app/linux/: CMakeLists.txt
mobile-app/test/: widget_test.dart
mobile-app/web/: index.html  manifest.json
mobile-app/windows/: CMakeLists.txt
(+69 files in other folders)
