[package]
name = "qr-redeem"
version = "0.1.0"
description = "QR validation and CPI gatekeeper for cofacito_nft minting"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "qr_redeem"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0.2"
anchor-spl = { version = "1.0.2", features = ["token", "metadata"] }
# cofecito with cpi feature exposes cofecito::cpi::mint_nft
cofecito = { path = "../cofecito", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
