[package]
name = "traceability-registry"
version = "0.1.0"
description = "Immutable on-chain hash registry for coffee lots"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "traceability_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
